Display note to test WebSockets locally
Also do not provide settings button if no settings content.

--- a/projects/time-control/styles.scss
+++ b/projects/time-control/styles.scss
@@ -27,8 +27,6 @@ main {
 	transition: border-color $t-time;
 }
 
-.ws {
-	h3, div {
-		font-family: Courier;
-	}
+.ws, .ws h3 {
+	font-family: Courier;
 }
