--- a/_includes/score/footer.html
+++ b/_includes/score/footer.html
@@ -33,8 +33,8 @@
         </svg>
     </button><!--
  --><input id="score-pointer" type="number" value="0" pattern="\d*" readonly="true"/><!-- step="1" --><!--
- --><button id="score-settings-open">
+ -->{% if page.settings %}<button id="score-settings-open">
         &#x2699;
-    </button>
+    </button>{% endif %}
 </footer>
 {% endif %}
