--- a/projects/globject/styles.scss
+++ b/projects/globject/styles.scss
@@ -1,9 +1,8 @@
 ---
 ---
-@font-face {
-    font-family: Bravura;
-    src: url(../../fonts/Bravura.woff);
-}
+
+@import "mixins";
+@include BravuraFont();
 
 text {
     font-family: 'Monaco', Courier, sans-serif;
