--- a/projects/glob/styles.scss
+++ b/projects/glob/styles.scss
@@ -1,12 +1,8 @@
-@font-face {
-    font-family: Bravura;
-    src: url(../../fonts/Bravura.woff);
-}
+---
+---
 
-.main {
-    /*margin: 0 auto;*/
-    /*display: block;*/
-}
+@import "mixins";
+@include BravuraFont();
 
 /*debug*/
 /*rect, circle {
@@ -19,14 +15,14 @@
     stroke: #111;
 }*/
 
-text.glob-child {
+.glob-child {
     font-family: Bravura;
     font-size: 36px;
     fill: #111;
     text-anchor: middle;
 }
 
-text.pc-set {
+.pc-set {
     font-family: monospace;
     fill: #111;
     text-anchor: middle;
