Hide score pointer when screen width cannot fit all controls (square)

--- a/_sass/score/_footer-controls.scss
+++ b/_sass/score/_footer-controls.scss
@@ -39,6 +39,11 @@
             }
         }
     }
+    #score-pointer {
+        @media (max-width: $footer-height * 6) {
+            display: none;
+        }
+    }
 }
 input {
     text-align: center;
