--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
   <div class="wrapper">
 
     <noscript>
-        <div class="noscript"><u>/!\</u> vectorscor.es requires JavaScript</div>
+        <div class="noscript"><u>/!\</u> vectorscores requires JavaScript</div>
         {% comment %}<!--Include helpful links here, including finished PDFs, when ready-->{% endcomment %}
     </noscript>
 
