--- a/_includes/work-list.html
+++ b/_includes/work-list.html
@@ -1,7 +1,8 @@
+<h3>Published</h3>
 <ul>
 {% for project in site.html_pages %}
     {% if project.layout == 'score' and project.status == 'published' %}
-        <li><a href="{{ project.url | prepend: site.baseurl }}">{{ project.title }}</a></li>
+    <li><a href="{{ project.url | prepend: site.baseurl }}">{{ project.title }}</a>{% if project.instrumentation %}, for {{ project.instrumentation }}{% endif %}</li>
     {% endif %}
 {% endfor %}
 </ul>
@@ -10,7 +11,7 @@
 <ul>
 {% for project in site.html_pages %}
     {% if project.layout == 'score' and project.status == 'wip' %}
-        <li><a href="{{ project.url | prepend: site.baseurl }}">{{ project.title }}</a></li>
+    <li><a href="{{ project.url | prepend: site.baseurl }}">{{ project.title }}</a>{% if project.instrumentation %}, for {{ project.instrumentation }}{% endif %}</li>
     {% endif %}
 {% endfor %}
 </ul>
@@ -19,7 +20,7 @@
 <ul>
 {% for project in site.html_pages %}
     {% if project.layout == 'score' and project.status == 'test' %}
-        <li><a href="{{ project.url | prepend: site.baseurl }}">{{ project.title }}</a></li>
+    <li><a href="{{ project.url | prepend: site.baseurl }}">{{ project.title }}</a>{% if project.instrumentation %}, for {{ project.instrumentation }}{% endif %}</li>
     {% endif %}
 {% endfor %}
 </ul>
