Clean up Storyboard
Remove card timer code as the linear progress bar suggests a
left-to-right reading of cards. Cards should be treated as
scenes not containing linear content.

--- a/scores/storyboard/styles.scss
+++ b/scores/storyboard/styles.scss
@@ -13,7 +13,7 @@
 }
 
 .card text {
-    fill: #444;
+    fill: #111;
 }
 
 .card text.pitch-class-set {
@@ -22,6 +22,11 @@
 }
 
 .card text.dynamics {
-  font-size: 24px;
-  font-family: Bravura;
+    font-size: 24px;
+    font-family: Bravura;
+}
+
+.card text.duration {
+    font-size: 24px;
+    font-family: Bravura;
 }
