--- a/scores/Textural-Messages/styles.scss
+++ b/scores/Textural-Messages/styles.scss
@@ -12,9 +12,7 @@ text {
 
 .globject {
     .rangePath {
-        stroke: #888;
-        stroke-width: 1;
-        stroke-dasharray: 5,5;
+        stroke: none;
         fill: none;
     }
     .globstuff text {
