--- a/scores/Textural-Messages/styles.scss
+++ b/scores/Textural-Messages/styles.scss
@@ -4,12 +4,17 @@
 @import "mixins";
 @include BravuraFont();
 
+header {
+    z-index: 10;
+}
+
 main {
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
+    margin: 0;
 }
 
 text {
