--- a/css/score.scss
+++ b/css/score.scss
@@ -3,7 +3,8 @@
 $layout-color-bg: white; // transparent;
 $layout-color-light: #eeeeee;
 $layout-trans-time: 0.6s;
-$layout-font-stack: "Inconsolata", "Courier New", Courier, monospace;
+$layout-header-font-stack: 'Times New Roman', serif;
+$layout-font-stack: Courier, monospace;
 $layout-border: 2px solid $layout-color-light;
 
 $score-info-color: #888888;
