--- a/scores/adsr/styles.scss
+++ b/scores/adsr/styles.scss
@@ -120,7 +120,7 @@ line[class^="debug-center"] {
     }
     // TODO make global settings modal styles?
     button {
-        font-family: "Inconsolata", "Courier New", Courier, monospace;
+        font-family: Courier, monospace;
         margin: 0;
         padding: 0.5em;
         border: 1px solid #888;
