--- a/_includes/score/header.html
+++ b/_includes/score/header.html
@@ -1,5 +1,5 @@
 <header id="score-header">
-<h1>{{ page.title }}</h1>
+<h1 class="score-title">{{ page.title }}</h1>
 {% if page.info or page.info_file %}
 <span class="modal-trig" title="About the score">
     <div id="score-info-open">i</div>
