--- a/css/main.scss
+++ b/css/main.scss
@@ -4,10 +4,9 @@
 @charset "utf-8";
 
 
-
 // Our variables
-$base-font-family: "Inconsolata", "Courier New", Courier, monospace;
-$head-font-family: $base-font-family; // "Merriweather";
+$base-font-family: Courier, monospace;
+$head-font-family: 'Times New Roman', serif;
 $base-font-size:   15px; //16px;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
@@ -15,7 +14,7 @@ $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
-$text-color:       #111;
+$text-color:       #444444;
 $background-color: #fdfdfd;
 $brand-color:      #2a7ae2;
 
