Add .vectorscores class to consistently stlyize project title

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,9 +7,10 @@
         {% comment %}<!--Include helpful links here, including finished PDFs, when ready-->{% endcomment %}
     </noscript>
 
+    <h2 class="footer-heading vectorscores">{{ site.title }}</h2>
+
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
-          <h2 class="footer-heading">{{ site.title }}</h2>
           <p>{{ site.description }}</p>
       </div>
 
