--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,4 +1,15 @@
 /**
+ * vectorscores
+ **/
+
+.vectorscores,
+#vectorscores {
+    font-weight: bold;
+    font-style: italic;
+    letter-spacing: normal;
+}
+
+/**
  * Site header
  */
 .site-header {
@@ -11,11 +22,8 @@
 
 .site-title {
     font-size: 26px;
-    font-weight: bold;
-    font-style: italic;
     font-family: $head-font-family;
     line-height: 56px;
-    // letter-spacing: -1px;
     margin-bottom: 0;
     float: left;
 
@@ -115,10 +123,7 @@ div.noscript {
 }
 
 .footer-heading {
-    font-size: 15px;
-    font-style: italic;
-    letter-spacing: 0.5px;
-    margin-bottom: 0;//$spacing-unit / 2;
+    margin-bottom: $spacing-unit / 2;
 }
 
 .contact-list,
@@ -129,7 +134,6 @@ div.noscript {
 
 .footer-col-wrapper {
     font-size: 15px;
-    color: $grey-color;
     margin-left: -$spacing-unit / 2;
     @extend %clearfix;
 }
