--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -190,7 +190,7 @@ div.noscript {
 }
 
 .page-heading {
-    font-size: 20px;
+    // font-size: 20px;
 }
 
 .post-list {
@@ -209,7 +209,7 @@ div.noscript {
 
 .post-link {
     display: block;
-    font-size: 24px;
+    // font-size: 24px;
 }
 
 
@@ -222,39 +222,43 @@ div.noscript {
 }
 
 .post-title {
-    font-size: 42px;
+    // font-size: 42px;
     letter-spacing: -1px;
     line-height: 1;
 
     @include media-query($on-laptop) {
-        font-size: 36px;
+        // font-size: 36px;
     }
 }
 
 .post-content {
     margin-bottom: $spacing-unit;
 
+    #vectorscores {
+        display: none;
+    }
+
     h2 {
-        font-size: 32px;
+        // font-size: 32px;
 
         @include media-query($on-laptop) {
-            font-size: 28px;
+            // font-size: 28px;
         }
     }
 
     h3 {
-        font-size: 26px;
+        // font-size: 26px;
 
         @include media-query($on-laptop) {
-            font-size: 22px;
+            // font-size: 22px;
         }
     }
 
     h4 {
-        font-size: 20px;
+        // font-size: 20px;
 
         @include media-query($on-laptop) {
-            font-size: 18px;
+            // font-size: 18px;
         }
     }
 }
