--- a/_layouts/score.html
+++ b/_layouts/score.html
@@ -6,6 +6,7 @@ layout: compress
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>{% if page.title %}{{ page.title }} | {{ site.title }}{% else %}{{ site.title }}{% endif %}</title>
     {% unless jekyll.environment == "offline" %}
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
     {% endunless %}
