Fade out old messages

--- a/scores/Textural-Messages/styles.scss
+++ b/scores/Textural-Messages/styles.scss
@@ -20,7 +20,7 @@ main {
 text {
     font-family: 'Monaco', Courier, sans-serif;
     font-size: 12px;
-    fill: black;
+    fill: #111;
 }
 
 .globject {
