Use serif font for info modal trigger and modal headers

--- a/_sass/score/_layout.scss
+++ b/_sass/score/_layout.scss
@@ -87,6 +87,7 @@ h1 {
     border: 2px solid $score-info-color;
     border-radius: 100%;
     cursor: pointer;
+    font-family: $layout-header-font-stack;
     font-size: $unit;
     line-height: $unit;
     text-align: center;
