--- a/_sass/score/_modal.scss
+++ b/_sass/score/_modal.scss
@@ -18,7 +18,7 @@
     font-family: $layout-font-stack;
     font-weight: normal;
     h1, h2, h3, h4, h5, h6 {
-        font-weight: normal;
+        font-family: $layout-header-font-stack;
     }
     padding: $unit;
     margin: 0 auto;
