--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -83,7 +83,7 @@ li {
  */
 h1, h2, h3, h4, h5, h6 {
     font-family: $head-font-family;
-    letter-spacing: -0.5px;
+    font-weight: normal;
 }
 
 h4 {
