--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -223,7 +223,7 @@ div.noscript {
 
 .post-title {
     // font-size: 42px;
-    letter-spacing: -1px;
+    // letter-spacing: -1px;
     line-height: 1;
 
     @include media-query($on-laptop) {
