--- a/_sass/score/_modal.scss
+++ b/_sass/score/_modal.scss
@@ -32,6 +32,7 @@ $font-size-scale: 1.125;
 .modal-content {
     h1, h2, h3, h4, h5, h6 {
         font-family: $layout-header-font-stack;
+        font-weight: normal;
         letter-spacing: -0.25px;
     }
     h4 {
