--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -37,6 +37,12 @@ ul, ol, dl, figure,
     margin-bottom: $spacing-unit / 2;
 }
 
+p, ul, ol, dl {
+    + h1, + h2, + h3, + h4, + h5, + h6 {
+        margin-top: $spacing-unit;
+    }
+}
+
 
 
 /**
