--- a/css/main.scss
+++ b/css/main.scss
@@ -50,6 +50,7 @@ $on-laptop:        800px;
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
     "base",
+    "typography",
     "layout",
     "description-list",
     "syntax-highlighting"
