Allow ad;sr pitches to be displayed numerically
Currently only able to toggle in code, not settings modal

--- a/scores/adsr/styles.scss
+++ b/scores/adsr/styles.scss
@@ -45,13 +45,20 @@ main, svg.main {
 .dynamics,
 .bartok {
     font-family: 'Bravura';
+    font-size: 16px;
 }
 .bartok {
     font-size: 26px;
 }
 
+.pitch-range-numeric {
+    font-family: 'Courier', monospace;
+    font-size: 13px;
+}
+
 .timbre,
-.pitch-range {
+.pitch-range,
+.pitch-range-numeric {
     @include textShadowOutline();
 }
 
