Make globject VS module with no dependencies (other than D3)

--- a/scores/globject/styles.scss
+++ b/scores/globject/styles.scss
@@ -11,12 +11,12 @@ text {
 }
 
 .globject {
-    .rangePath {
+    .globject-path {
         stroke: #888;
         stroke-width: 1;
         fill: none;
     }
-    .globstuff text {
+    .globject-content text {
         font-family: Bravura;
         font-size: 24px;
     }
