--- a/_includes/work-list-loop.html
+++ b/_includes/work-list-loop.html
@@ -1,4 +1,7 @@
 {% assign layout = include.layout | default: 'score' %}
+{% assign filter_equals = include.filter_equals | default: '' %}
+{% assign filter_contains = include.filter_contains | default: 'non_matching' %}
+
 {% assign scores = '' | split: '' %}
 {% for html_page in site.html_pages %}
     {% if html_page.layout contains layout %}
@@ -7,7 +10,7 @@
 {% endfor %}
 
 {% for score in scores %}
-    {% if score[include.filter_by] == include.filter_value or score[include.filter_by] contains include.filter_value %}
+    {% if score[include.filter_by] == filter_equals or score[include.filter_by] contains filter_contains %}
     {% include work-list-li.html project=score %}
     {% endif %}
 {% endfor %}
