Group page includes into own directory

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,11 +4,11 @@ layout: compress
 <!DOCTYPE html>
 <html>
 
-  {% include head.html %}
+  {% include page/head.html %}
 
   <body>
 
-    {% include header.html %}
+    {% include page/header.html %}
 
     <div class="page-content">
       <div class="wrapper">
@@ -16,7 +16,7 @@ layout: compress
       </div>
     </div>
 
-    {% include footer.html %}
+    {% include page/footer.html %}
 
   </body>
 
