Display dirge,,march globject duration, time events with duration

--- a/scores/dirge-march/styles.scss
+++ b/scores/dirge-march/styles.scss
@@ -17,6 +17,11 @@
     font-size: 24px;
 }
 
+.duration-text {
+    font-family: monospace;
+    font-size: 16px;
+}
+
 .tempo-text tspan {
     font-size: 16px;
 
