Add basic pitch material to dirge,,march

--- a/scores/dirge-march/styles.scss
+++ b/scores/dirge-march/styles.scss
@@ -10,6 +10,13 @@
         stroke-width: 1;
         fill: none;
     }
+
+    .pitch-class {
+        font-family: monospace;
+    }
+    .modifier {
+        font-family: Bravura;
+    }
 }
 
 .percussion-parts text {
