Add card durations

--- a/scores/storyboard/prelude/styles.scss
+++ b/scores/storyboard/prelude/styles.scss
@@ -16,6 +16,11 @@
     fill: #111;
 }
 
+.card text.card-duration {
+    font-size: 12px;
+    font-family: monospace;
+}
+
 .card text.pitch-class-set {
     font-size: 12px;
     font-family: monospace;
