--- a/scores/storyboard/prelude/styles.scss
+++ b/scores/storyboard/prelude/styles.scss
@@ -4,6 +4,24 @@
 @import "mixins";
 @include BravuraFont();
 
+html {
+    height: 100%;
+}
+body {
+    min-height: 100%;
+    position: relative;
+}
+main {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+svg {
+    width: 100%;
+    height: 100%;
+}
 /**
  * Cards
  */
