Add rest between sections A and B

--- a/scores/dirge-march/styles.scss
+++ b/scores/dirge-march/styles.scss
@@ -42,9 +42,18 @@ svg {
     }
 }
 
-.percussion-parts text {
+.bravura {
     font-family: Bravura;
     font-size: 24px;
+}
+
+.rest {
+    @extend .bravura;
+    text-anchor: middle;
+}
+
+.percussion-parts text {
+    @extend .bravura;
 }
 
 .duration-text {
