--- a/scores/dirge-march/styles.scss
+++ b/scores/dirge-march/styles.scss
@@ -56,6 +56,10 @@ svg {
     @extend .bravura;
 }
 
+.dynamics {
+    @extend .bravura;
+}
+
 .duration-text {
     font-family: monospace;
     font-size: 16px;
