--- a/scores/decision-tree/cells/styles.scss
+++ b/scores/decision-tree/cells/styles.scss
@@ -3,6 +3,25 @@
 @import "mixins";
 @include BravuraFont();
 
+html {
+    height: 100%;
+}
+body {
+    min-height: 100%;
+    position: relative;
+}
+main {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+svg {
+    width: 100%;
+    height: 100%;
+}
+
 g {
     cursor: pointer;
 }
