Use update pattern to help change Glob density

--- a/scores/glob/styles.scss
+++ b/scores/glob/styles.scss
@@ -15,10 +15,11 @@
     }
 }
 
-.glob-child {
+.globule {
     font-family: Bravura;
     font-size: 36px;
     fill: #111;
+    text-anchor: start;
 }
 
 .pc-set {
