--- a/scores/glob/styles.scss
+++ b/scores/glob/styles.scss
@@ -4,20 +4,28 @@
 @import "mixins";
 @include BravuraFont();
 
-.debug {
-    rect, circle {
-        stroke: pink;
-        fill-opacity: 0;
-    }
-    path {
-        fill: #111;
-        stroke: #111;
-    }
+html {
+    height: 100%;
+}
+body {
+    min-height: 100%;
+    position: relative;
+}
+main {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+svg {
+    width: 100%;
+    height: 100%;
 }
 
 .globule {
     font-family: Bravura;
-    font-size: 36px;
+    font-size: 48px;
     fill: #111;
     text-anchor: start;
 }
