Add score info and in-score text instructions

--- a/scores/topographies-ii/walk-reveal/styles.scss
+++ b/scores/topographies-ii/walk-reveal/styles.scss
@@ -29,3 +29,9 @@ text {
     fill: #111111;
     // outline: 1px dotted pink;
 }
+
+.instructions {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 12px;
+    font-style: italic;
+}
