--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -30,7 +30,9 @@ body {
 .work-title {
     font-family: $head-font-family;
     font-style: italic;
-    letter-spacing: 0.3px;
+    letter-spacing: 0.2px;
+    font-size: 16px;
+    line-height: 1.40625;
 }
 
 
