--- a/_includes/work-list-li.html
+++ b/_includes/work-list-li.html
@@ -1,3 +1,6 @@
 <li>
-    <a href="{{ include.project.url | prepend: site.baseurl }}" class="work-title">{{ include.project.title }}</a>{% if include.project.instrumentation %}, for {{ include.project.instrumentation }}{% endif %}
+    <span><a href="{{ include.project.url | prepend: site.baseurl }}" class="work-title">{{ include.project.title }}</a>{% if include.project.instrumentation %}, for {{ include.project.instrumentation }}{% endif %}</span>
+    {% if include.project.formats %}
+    <span class="work-formats">[{{ include.project.formats | join: ", " }}]</span>
+    {% endif %}
 </li>
